Fixed the wierd post-sublist spacing issues in the multi-layer ToC's

--- a/docs/_sass/jekyll-theme-midnight.scss
+++ b/docs/_sass/jekyll-theme-midnight.scss
@@ -269,8 +269,9 @@ section
 				text-align: right;
 			}
 		}
-
 	}
+
+	li ol { margin: 0; }
 }
 
 @media print, screen and (max-width: 720px)
